add front for invoice details

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1002,4 +1002,9 @@ notifications.invalid=At least one option must be selected in each category
 transfer.selfNickname=You cannot transfer costs to yourself
 merchants.transfer.minSum=Minimal sum for transfer:
 merchants.input.minSum=Minimal sum for refill:
+merchants.invoiceDetails.title=Invoice details
+merchants.invoiceDetails.bank=Bank*
+merchants.invoiceDetails.userAccount=Your payment account*
+merchants.invoiceDetails.remark=Additional remarks
+merchants.invoiceDetails.paymentDetails=Payment details
 
