--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -804,3 +804,8 @@ notifications.invalid=В каждой категории нужно выбрат
 transfer.selfNickname=Вы не можете перевести средства самому себе
 merchants.transfer.minSum=Минимальная сумма для перевода:
 merchants.input.minSum=Минимальная сумма для пополнения:
+merchants.invoiceDetails.title=Реквизиты инвойса
+merchants.invoiceDetails.bank=Банк*
+merchants.invoiceDetails.userAccount=Номер Вашего счета*
+merchants.invoiceDetails.remark=Дополнительные примечания
+merchants.invoiceDetails.paymentDetails=Детали платежа
