add front for invoice details

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -739,6 +739,17 @@ merchants.transfer.minSum=Minimal sum for transfer:
 merchants.input.minSum=Minimal sum for refill:
 merchants.invoiceDetails.title=Invoice details
 merchants.invoiceDetails.bank=Bank*
-merchants.invoiceDetails.userAccount=Your payment account*
+merchants.invoiceDetails.userFullName=Full name of payee*
 merchants.invoiceDetails.remark=Additional remarks
 merchants.invoiceDetails.paymentDetails=Payment details
+merchants.notSelected=Not selected
+merchants.invoiceDetails.bankName=Bank
+merchants.invoiceDetails.bankAccount=Account number
+merchants.invoiceDetails.bankRecipient=Recipient
+merchants.invoice.confirm=Confirm
+merchants.invoiceConfirm.title=Payment confirmation
+merchants.invoice.otherBank=Other (please enter name below)
+merchants.invoiceConfirm.userAccount=Payee account number
+merchants.invoiceConfirm.bankFrom=Payee bank
+merchants.invoice.viewConfirm=View
+merchants.error.invoiceRequestNotFound=No invoice request found by this ID
