--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -823,6 +823,6 @@ merchants.transfer.minSum=Minimal sum for transfer:
 merchants.input.minSum=Minimal sum for refill:
 merchants.invoiceDetails.title=Invoice details
 merchants.invoiceDetails.bank=Bank*
-merchants.invoiceDetails.userAccount=Your payment account*
+merchants.invoiceDetails.userFullName=Your payment account*
 merchants.invoiceDetails.remark=Additional remarks
 merchants.invoiceDetails.paymentDetails=Payment details
