--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -202,22 +202,7 @@ merchants.depositNotification.body = Please pay {0} on the checking account {1}
 merchants.depositNotificationWithCurrencyCNY.body = Please pay {0} on the wallet {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body = Please pay {0} on the wallet {1} <br> \
-    1. Bank: BCA <br> \
-    Account number: 3150963141<br>\
-    Recipient: Nanda Rizal Pahlewi<br>\
-    <br>\
-    2. Bank: MANDIRI<br>\
-    Account number: 1440099965557<br>\
-    Recipient: Nanda Rizal Pahlewi<br>\
-    <br>\
-    3. Bank: BNI<br>\
-    Account number: 0483087786<br>\
-    Recipient: Nanda Rizal Pahlewi<br>\
-    <br>\
-    4. Bank: BRI<br>\
-    Account number: 057901000435567<br>\
-    Recipient: Nanda Rizal Pahlewi
+merchants.depositNotificationWithCurrencyIDR.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request
 merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
@@ -753,3 +738,7 @@ merchants.invoiceConfirm.userAccount=Payee account number
 merchants.invoiceConfirm.bankFrom=Payee bank
 merchants.invoice.viewConfirm=View
 merchants.error.invoiceRequestNotFound=No invoice request found by this ID
+merchants.invoiceConfirm.noty=Thank you for confirmation. The request will be processed by Exrates.me administration
+merchants.error.fullNameInLatin=Enter your full name in Latin characters
+merchants.error.bankNameInLatin=Enter bank name in Latin characters
+merchants.error.accountDigitsOnly=Account number must contain only digits
