add change admin view for invoices

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -305,7 +305,7 @@ transaction.currency=Currency
 transaction.currencyBuy=Purchase currency
 transaction.datetime=Transaction date
 transaction.exrates=exrates.me
-transaction.id=Id transactions
+transaction.id=Transaction ID
 transaction.merchant=Payment system
 transaction.operationTypeWALLET_INNER_TRANSFER = Wallet inner transfer
 transaction.operationType=Transaction type
@@ -723,8 +723,8 @@ transfer.selfNickname=You cannot transfer costs to yourself
 merchants.transfer.minSum=Minimal sum for transfer:
 merchants.input.minSum=Minimal sum for refill:
 merchants.invoiceDetails.title=Invoice details
-merchants.invoiceDetails.bank=Bank*
-merchants.invoiceDetails.userFullName=Full name of payee*
+merchants.invoiceDetails.bank=Bank
+merchants.invoiceDetails.userFullName=Full name of payee
 merchants.invoiceDetails.remark=Additional remarks
 merchants.invoiceDetails.paymentDetails=Payment details
 merchants.notSelected=Not selected
@@ -742,3 +742,6 @@ merchants.invoiceConfirm.noty=Thank you for confirmation. The request will be pr
 merchants.error.fullNameInLatin=Enter your full name in Latin characters
 merchants.error.bankNameInLatin=Enter bank name in Latin characters
 merchants.error.accountDigitsOnly=Account number must contain only digits
+invoice.payeeBank=Payee bank
+invoice.exratesBank=Exrates bank
+invoice.infoModal.title=Invoice request info
