--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -826,3 +826,21 @@ merchants.invoiceDetails.bank=Bank*
 merchants.invoiceDetails.userFullName=Your payment account*
 merchants.invoiceDetails.remark=Additional remarks
 merchants.invoiceDetails.paymentDetails=Payment details
+merchants.notSelected=Not selected
+merchants.invoiceDetails.bankName=Bank
+merchants.invoiceDetails.bankAccount=Account number
+merchants.invoiceDetails.bankRecipient=Recipient
+merchants.invoice.confirm=Confirm
+merchants.invoiceConfirm.title=Payment confirmation
+merchants.invoice.otherBank=Other (please enter name below)
+merchants.invoiceConfirm.userAccount=Payee account number
+merchants.invoiceConfirm.bankFrom=Payee bank
+merchants.invoice.viewConfirm=View
+merchants.error.invoiceRequestNotFound=No invoice request found by this ID
+merchants.invoiceConfirm.noty=Thank you for confirmation. The request will be processed by Exrates.me administration
+merchants.error.fullNameInLatin=Enter your full name in Latin characters
+merchants.error.bankNameInLatin=Enter bank name in Latin characters
+merchants.error.accountDigitsOnly=Account number must contain only digits
+invoice.payeeBank=Payee bank
+invoice.exratesBank=Exrates bank
+invoice.infoModal.title=Invoice request info
