--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -790,8 +790,8 @@ transfer.selfNickname=Вы не можете перевести средства
 merchants.transfer.minSum=Минимальная сумма для перевода:
 merchants.input.minSum=Минимальная сумма для пополнения:
 merchants.invoiceDetails.title=Реквизиты инвойса
-merchants.invoiceDetails.bank=Банк*
-merchants.invoiceDetails.userFullName=ФИО плательщика*
+merchants.invoiceDetails.bank=Банк
+merchants.invoiceDetails.userFullName=ФИО плательщика
 merchants.invoiceDetails.remark=Дополнительные примечания
 merchants.invoiceDetails.paymentDetails=Детали платежа
 merchants.notSelected=Не выбрано
@@ -809,3 +809,6 @@ merchants.invoiceConfirm.noty=Благодарим за подтверждени
 merchants.error.fullNameInLatin=Введите имя и фамилию на латинице
 merchants.error.bankNameInLatin=Введите название банка на латинице
 merchants.error.accountDigitsOnly=Номер счёта должен содержать только цифры
+invoice.payeeBank=Банк плательщика
+invoice.exratesBank=Банк Exrates
+invoice.infoModal.title=Информация об инвойсе
