--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -844,3 +844,25 @@ merchants.error.accountDigitsOnly=Account number must contain only digits
 invoice.payeeBank=Payee bank
 invoice.exratesBank=Exrates bank
 invoice.infoModal.title=Invoice request info
+merchants.depositNotificationWithCurrencyIDR.old=Please pay {0} on the wallet {1} <br> \
+    1. Bank: BCA <br> \
+    Account number: 3150963141<br>\
+    Recipient: Nanda Rizal Pahlewi<br>\
+    <br>\
+    2. Bank: MANDIRI<br>\
+    Account number: 1440099965557<br>\
+    Recipient: Nanda Rizal Pahlewi<br>\
+    <br>\
+    3. Bank: BNI<br>\
+    Account number: 0483087786<br>\
+    Recipient: Nanda Rizal Pahlewi<br>\
+    <br>\
+    4. Bank: BRI<br>\
+    Account number: 057901000435567<br>\
+    Recipient: Nanda Rizal Pahlewi
+merchants.depositNotificationWithCurrencyCNY.old = Please pay {0} on the wallet {1} <br> \
+    帐号：110923954410401, <br> \
+    开户行：招商银行北京东直门支行
+merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet {1} <br> \
+    Kasikorn bank <br> \
+    015-1-65751-6
