fix payee -> payer, indonesian translation

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -724,7 +724,7 @@ merchants.transfer.minSum=Minimal sum for transfer:
 merchants.input.minSum=Minimal sum for refill:
 merchants.invoiceDetails.title=Invoice details
 merchants.invoiceDetails.bank=Bank
-merchants.invoiceDetails.userFullName=Full name of payee
+merchants.invoiceDetails.userFullName=Full name of payer
 merchants.invoiceDetails.remark=Additional remarks
 merchants.invoiceDetails.paymentDetails=Payment details
 merchants.notSelected=Not selected
@@ -734,15 +734,15 @@ merchants.invoiceDetails.bankRecipient=Recipient
 merchants.invoice.confirm=Confirm
 merchants.invoiceConfirm.title=Payment confirmation
 merchants.invoice.otherBank=Other (please enter name below)
-merchants.invoiceConfirm.userAccount=Payee account number
-merchants.invoiceConfirm.bankFrom=Payee bank
+merchants.invoiceConfirm.userAccount=Payer account number
+merchants.invoiceConfirm.bankFrom=Payer bank
 merchants.invoice.viewConfirm=View
 merchants.error.invoiceRequestNotFound=No invoice request found by this ID
 merchants.invoiceConfirm.noty=Thank you for confirmation. The request will be processed by Exrates.me administration
 merchants.error.fullNameInLatin=Enter your full name in Latin characters
 merchants.error.bankNameInLatin=Enter bank name in Latin characters
 merchants.error.accountDigitsOnly=Account number must contain only digits
-invoice.payeeBank=Payee bank
+invoice.payerBank=Payer bank
 invoice.exratesBank=Exrates bank
 invoice.infoModal.title=Invoice request info
 merchants.depositNotificationWithCurrencyIDR.old=Please pay {0} on the wallet {1} <br> \
