--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -197,22 +197,7 @@ merchants.depositNotification.body =Silahkan membayar {0} ke dompet {1}
 merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke akun {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke akun {1} <br> \
-    1. Bank: BCA <br> \
-    Account number: 3150963141<br>\
-    Recipient: Nanda Rizal Pahlewi<br>\
-    <br>\
-    2. Bank: MANDIRI<br>\
-    Account number: 1440099965557<br>\
-    Recipient: Nanda Rizal Pahlewi<br>\
-    <br>\
-    3. Bank: BNI<br>\
-    Account number: 0483087786<br>\
-    Recipient: Nanda Rizal Pahlewi<br>\
-    <br>\
-    4. Bank: BRI<br>\
-    Account number: 057901000435567<br>\
-    Recipient: Nanda Rizal Pahlewi
+merchants.depositNotificationWithCurrencyIDR.body = Refill permintaan dibuat. Silahkan membayar {0} di dompet {1} dan mengkonfirmasi permintaan
 merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
@@ -786,7 +771,7 @@ accessDenied.title=Access denied
 accessDenied.message=You do not have permission to access this page!
 accessDenied.signInDifferentUser=Sign in as different user
 admin.manualBalanceChange.title=Change balance manually
-admin.submit=Submit
+admin.submit=Menyerahkan
 admin.commissions=Commissions
 admin.editCommission=Edit commission
 admin.commissions.operationType=Operation type
@@ -820,28 +805,29 @@ transfer.invalidNickname=Invalid nickname
 notifications.invalid=At least one option must be selected in each category
 transfer.selfNickname=You cannot transfer costs to yourself
 merchants.transfer.minSum=Minimal sum for transfer:
-merchants.input.minSum=Minimal sum for refill:
-merchants.invoiceDetails.title=Invoice details
-merchants.invoiceDetails.bank=Bank*
-merchants.invoiceDetails.userFullName=Your payment account*
-merchants.invoiceDetails.remark=Additional remarks
-merchants.invoiceDetails.paymentDetails=Payment details
-merchants.notSelected=Not selected
-merchants.invoiceDetails.bankName=Bank
-merchants.invoiceDetails.bankAccount=Account number
-merchants.invoiceDetails.bankRecipient=Recipient
-merchants.invoice.confirm=Confirm
-merchants.invoiceConfirm.title=Payment confirmation
-merchants.invoice.otherBank=Other (please enter name below)
-merchants.invoiceConfirm.userAccount=Payee account number
-merchants.invoiceConfirm.bankFrom=Payee bank
-merchants.invoice.viewConfirm=View
-merchants.error.invoiceRequestNotFound=No invoice request found by this ID
-merchants.invoiceConfirm.noty=Thank you for confirmation. The request will be processed by Exrates.me administration
-merchants.error.fullNameInLatin=Enter your full name in Latin characters
-merchants.error.bankNameInLatin=Enter bank name in Latin characters
-merchants.error.accountDigitsOnly=Account number must contain only digits
-invoice.payeeBank=Payee bank
+merchants.input.minSum=Sum minimal untuk mengisi:
+merchants.invoiceDetails.bank = Bank
+merchants.invoiceDetails.userFullName = Nama lengkap dari pembayar
+merchants.invoiceDetails.remark = Komentar lain
+merchants.invoiceDetails.paymentDetails = Rincian pembayaran
+merchants.notSelected = Tidak dipilih
+merchants.invoiceDetails.bankName = Bank
+merchants.invoiceDetails.bankAccount = Nomor rekening
+merchants.invoiceDetails.bankRecipient = Penerima
+merchants.invoice.confirm = Konfirmasi
+merchants.invoiceConfirm.title = Konfirmasi pembayaran
+merchants.invoice.otherBank = Lainnya (masukkan nama di bawah ini)
+
+merchants.invoiceDetails.title = Faktur Rincian
+merchants.invoiceConfirm.userAccount = Pembayar nomor rekening
+merchants.invoiceConfirm.bankFrom = Pembayar Bank
+merchants.invoice.viewConfirm = Pandangan
+merchants.error.invoiceRequestNotFound = Tidak ada permintaan faktur ditemukan oleh ID ini
+merchants.invoiceConfirm.noty = Terima kasih untuk konfirmasi. Permintaan akan diproses oleh administrasi Exrates.me
+merchants.error.fullNameInLatin = Masukkan nama lengkap Anda dalam karakter Latin
+merchants.error.bankNameInLatin = Masukkan nama bank dalam karakter Latin
+merchants.error.accountDigitsOnly= Akun jumlah harus berisi angka saja
+invoice.payerBank=Payer bank
 invoice.exratesBank=Exrates bank
 invoice.infoModal.title=Invoice request info
 merchants.depositNotificationWithCurrencyIDR.old=Please pay {0} on the wallet {1} <br> \
