--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -809,7 +809,7 @@ merchants.invoiceConfirm.noty=Благодарим за подтверждени
 merchants.error.fullNameInLatin=Введите имя и фамилию на латинице
 merchants.error.bankNameInLatin=Введите название банка на латинице
 merchants.error.accountDigitsOnly=Номер счёта должен содержать только цифры
-invoice.payeeBank=Банк плательщика
+invoice.payerBank=Банк плательщика
 invoice.exratesBank=Банк Exrates
 invoice.infoModal.title=Информация об инвойсе
 merchants.depositNotificationWithCurrencyIDR.old=Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
