--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1032,3 +1032,5 @@ merchants.depositNotificationWithCurrencyCNY.old = Please pay {0} on the wallet 
 merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
+merchants.invoiceConfirm.receiptScan=Receipt image (.jpg, .png, .gif, no more than 1 MB) 
+merchants.errorUploadReceipt = Error loading files. Valid format is *.png, *.jpg, *.jpeg not bigger than 1 MB
