--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -852,3 +852,5 @@ merchants.depositNotificationWithCurrencyCNY.old = Please pay {0} on the wallet 
 merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
+merchants.invoiceConfirm.receiptScan=Kwitanci gambar (.jpg, .png, .gif, tidak lebih dari 1 MB)
+merchants.errorUploadReceipt = Kesalahan memuat berkas. Format yang dapat diterima - * .png, * .jpg, * .jpeg ukuran tidak lebih dari 1 MB
