add payer bank codes

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -770,4 +770,7 @@ merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet 
 merchants.invoiceConfirm.receiptScan=Receipt image (.jpg, .png, .gif, no more than 1 MB) 
 merchants.errorUploadReceipt = Error loading files. Valid format is *.png, *.jpg, *.jpeg not bigger than 1 MB
 admin.invoice.receipt=Receipt
-merchants.input.addition=Add __addition to the end of deposit amount. These extra digits are needed in order to certify your deposit
+merchants.input.addition=Add {0} to the end of deposit amount. These extra digits are needed in order to certify your deposit
+invoice.bankCode=Bank code
+invoice.bankCode.error=Code must be 2-5 digits
+
