--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -855,4 +855,6 @@ merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet 
 merchants.invoiceConfirm.receiptScan=Kwitanci gambar (.jpg, .png, .gif, tidak lebih dari 1 MB)
 merchants.errorUploadReceipt = Kesalahan memuat berkas. Format yang dapat diterima - * .png, * .jpg, * .jpeg ukuran tidak lebih dari 1 MB
 admin.invoice.receipt=Kwitanci
-merchants.input.addition=Tambahkan __addition akhir jumlah deposit. Ini ekstra digit diperlukan untuk sertifikasi deposit Anda
+merchants.input.addition=Tambahkan {0} akhir jumlah deposit. Ini ekstra digit diperlukan untuk sertifikasi deposit Anda
+invoice.bankCode=Kode Bank
+invoice.bankCode.error=Kode harus 2-5 angka
