--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -759,6 +759,8 @@ merchants.invoice.accepted.title=Invoice accepted
 merchants.invoice.accepted.message=Your invoice id {0} has been accepted!
 merchants.invoice.declined.title=Invoice declined
 merchants.invoice.declined.message=Your invoice id {0} has been declined!
+merchants.invoice.expired.title=Invoice expired
+merchants.invoice.expired.message=Your invoice id {0} has been expired!
 merchants.invoice.checkAndConfirmAgain=ReConfirm
 merchants.invoice.revoke=Revoke
 merchants.invoice.error.notAllowedOperation=Not allowed operation!
