add withdraw invoice data

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -858,3 +858,5 @@ admin.invoice.receipt=Kwitanci
 merchants.input.addition=Tambahkan {0} akhir jumlah deposit. Ini ekstra digit diperlukan untuk sertifikasi deposit Anda
 invoice.bankCode=Kode Bank
 invoice.bankCode.error=Kode harus 2-5 angka
+merchants.withdrawDetails.inputFinalSum=Jumlah yang harus dibayar
+merchants.withdrawDetails.outputFinalSum=Jumlah total yang akan ditarik
