--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -840,3 +840,5 @@ admin.invoice.receipt=Квитанция
 merchants.input.addition=Добавлено {0} к сумме пополнения. Дополнительные цифры нужны для заверения пополнения
 invoice.bankCode=Код банка
 invoice.bankCode.error=Код должен состоять из 2-5 цифр
+merchants.withdrawDetails.inputFinalSum=Сумма к оплате
+merchants.withdrawDetails.outputFinalSum=Сумма к выводу
