--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -773,4 +773,6 @@ admin.invoice.receipt=Receipt
 merchants.input.addition=Add {0} to the end of deposit amount. These extra digits are needed in order to certify your deposit
 invoice.bankCode=Bank code
 invoice.bankCode.error=Code must be 2-5 digits
+merchants.withdrawDetails.inputFinalSum=Amount to be payed
+merchants.withdrawDetails.outputFinalSum=Amount to be enrolled
 
