--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -860,3 +860,6 @@ invoice.bankCode=Kode Bank
 invoice.bankCode.error=Kode harus 2-5 angka
 merchants.withdrawDetails.inputFinalSum=Jumlah yang harus dibayar
 merchants.withdrawDetails.outputFinalSum=Jumlah total yang akan ditarik
+merchants.withdrawDetails.recipientBank=Bank penerima
+merchants.withdrawDetails.recipientAccount=Nomor rekening penerima
+merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
