--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -842,3 +842,6 @@ invoice.bankCode=Код банка
 invoice.bankCode.error=Код должен состоять из 2-5 цифр
 merchants.withdrawDetails.inputFinalSum=Сумма к оплате
 merchants.withdrawDetails.outputFinalSum=Сумма к выводу
+merchants.withdrawDetails.recipientBank=Банк получателя
+merchants.withdrawDetails.recipientAccount=Номер счета получателя
+merchants.withdrawDetails.recipientFullName=ФИО получателя
