--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1040,3 +1040,6 @@ invoice.bankCode=Bank code
 invoice.bankCode.error=Code must be 2-5 digits
 merchants.withdrawDetails.inputFinalSum=Amount to be payed
 merchants.withdrawDetails.outputFinalSum=Amount to be enrolled
+merchants.withdrawDetails.recipientBank=Recipient's bank
+merchants.withdrawDetails.recipientAccount=Recipient's account number
+merchants.withdrawDetails.recipientFullName=Recipient's full name
