--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -823,3 +823,31 @@ merchants.depositNotificationWithCurrencyCNY.old = Please pay {0} on the wallet 
 merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
+
+merchants.invoice.accept=Accept
+merchants.invoice.decline=Decline
+merchants.invoice.accepted=Accepted
+merchants.invoice.declined=Declined
+merchants.invoice.onWaitingForUserConfirmation=On confirmation
+merchants.invoice.revokedByUser=Revoked
+merchants.invoice.timeOutExpired=Expired
+merchants.invoice.promptAccept=Are you sure you want to accept the invoice?
+merchants.invoice.promptDecline=Are you sure you want to decline the invoice?
+merchants.invoice.accepted.title=Invoice accepted
+merchants.invoice.accepted.message=Your invoice id {0} has been accepted!
+merchants.invoice.declined.title=Invoice declined
+merchants.invoice.declined.message=Your invoice id {0} has been declined!
+merchants.invoice.expired.title=Invoice expired
+merchants.invoice.expired.message=Your invoice id {0} has been expired!
+merchants.invoice.checkAndConfirmAgain=ReConfirm
+merchants.invoice.revoke=Revoke
+merchants.invoice.error.notAllowedOperation=Not allowed operation!
+merchants.invoice.revoke.submit=Revoke the invoice
+merchants.invoice.revoke.success=Your invoice has been revoked successfully!
+admin.return=Return
+merchants.invoice.CREATED_USER=Created
+merchants.invoice.CONFIRMED_USER=In acceptance
+merchants.invoice.REVOKED_USER=Revoked
+merchants.invoice.ACCEPTED_ADMIN=Accepted
+merchants.invoice.DECLINED_ADMIN=Declined
+merchants.invoice.EXPIRED=Expired
