--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -852,7 +852,6 @@ merchants.depositNotificationWithCurrencyCNY.old = Please pay {0} on the wallet 
 merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
-
 merchants.invoice.accept=Accept
 merchants.invoice.decline=Decline
 merchants.invoice.accepted=Accepted
@@ -866,8 +865,17 @@ merchants.invoice.accepted.title=Invoice accepted
 merchants.invoice.accepted.message=Your invoice id {0} has been accepted!
 merchants.invoice.declined.title=Invoice declined
 merchants.invoice.declined.message=Your invoice id {0} has been declined!
+merchants.invoice.expired.title=Invoice expired
+merchants.invoice.expired.message=Your invoice id {0} has been expired!
 merchants.invoice.checkAndConfirmAgain=ReConfirm
 merchants.invoice.revoke=Revoke
 merchants.invoice.error.notAllowedOperation=Not allowed operation!
 merchants.invoice.revoke.submit=Revoke the invoice
+merchants.invoice.revoke.success=Your invoice has been revoked successfully!
 admin.return=Return
+merchants.invoice.CREATED_USER=Created
+merchants.invoice.CONFIRMED_USER=In acceptance
+merchants.invoice.REVOKED_USER=Revoked
+merchants.invoice.ACCEPTED_ADMIN=Accepted
+merchants.invoice.DECLINED_ADMIN=Declined
+merchants.invoice.EXPIRED=Expired
