fix orders in admin part

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -544,6 +544,7 @@ myorders.currencypair=ازواج العملة
 myorders.amount=الكمية
 myorders.rate=الثمن
 myorders.total=الجملي
+myorders.opened=افتتاح
 myorders.cancelled=ملغية
 myorders.open=افتتاح
 myorders.deal=معاملات
