--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -521,6 +521,7 @@ mystatement.amount = 数目
 myorders.currencypair = 货币对
 myorders.canceldate = 取消日期
 admin.refCommonRootCurrent = 目前使用者｛0｝
+myorders.opened = 打开的
 myorders.cancelled = 已被取消的
 mystatement.commissionamount = 其中的手续费
 ordersearch.datetimeplaceholder = 年-月-日-小时-分钟-秒
