--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -514,6 +514,7 @@ myorders.currencypair=Currency pair
 myorders.amount=Amount
 myorders.rate=Price
 myorders.total=Total
+myorders.opened=Opened
 myorders.cancelled=Cancelled
 myorders.open=Open
 myorders.deal=All deals
