--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -567,6 +567,7 @@ myorders.currencypair=Pasangan mata uang
 myorders.amount=Jumlah
 myorders.rate=Harga
 myorders.total=Total
+myorders.opened=Dibuka
 myorders.cancelled=Dibatalkan
 myorders.open=Dibuka
 myorders.deal=Perjanjian
