--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -580,6 +580,7 @@ myorders.currencypair=Валютная пара
 myorders.amount=Количество
 myorders.rate=Цена
 myorders.total=Итого
+myorders.opened=Открытые
 myorders.cancelled=Отмененные
 myorders.open=Открытые
 myorders.deal=Все сделки
