--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -369,6 +369,7 @@ dashboard.aboutUs = About us
 dashboard.buyCurrency = buy currency
 myorders.canceldate = Date the cancel
 admin.refCommonRootCurrent = Current user {0}
+myorders.opened=Opened
 myorders.cancelled = Cancelled
 ordersearch.datetimeplaceholder = yyyy-mm-dd HH:mm:ss
 admin.refPercentExceedMaximum = The total amount of percents at all levels should not exceed 100%
