fix patches and bank regex

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -193,7 +193,7 @@ merchants.sumToPay=المبلغ الجملي
 merchants.withdraw=سحب
 merchants.pendingEnrollment= تحويل الأموال يحدث في ال 48 ساعة القادمة
 #not translated
-merchants.depositNotification.body = {1} على المحفظة {0}من فضلك ادفع
+merchants.depositNotification.body = {1} على المحفظة {0}من فضلك ادفع خلال 96 ساعة.
 #not translated
 merchants.depositNotificationWithCurrency.body = <br> \{1} عل الحساب  {0} من فضلك ادفع
 ICBC <br> \
@@ -676,7 +676,7 @@ validation.messageRequired=ضروري "نص الرسالة" حقل
 merchants.depositNotificationWithCurrencyCNY.body = Please pay {0} on the wallet {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request
+merchants.depositNotificationWithCurrencyIDR.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
 merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
