--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -406,7 +406,7 @@ admin.wrongfinpassword = 财政密码输入不正确。
 merchants.waiting = 期望
 emailsubmitChangeFinPassword.subject =确认密码变更exrates.me金融
 dashboard.sellOrders = 销售订单：
-merchants.depositNotification.body =请支付 {0} {1} 钱包
+merchants.depositNotification.body =请支付 {0} {1} 钱包 在48小时内
 #not translated
 merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {1} <br> \
     ICBC <br> \
@@ -421,7 +421,7 @@ merchants.depositNotificationWithCurrency.body = 請付人民幣 {0} 在錢包 {
 merchants.depositNotificationWithCurrencyCNY.body =  請付人民幣 {0} 在錢包 {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request
+merchants.depositNotificationWithCurrencyIDR.body = Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
 merchants.depositNotificationWithCurrencyTHB.body = 請付人民幣 {0} 在錢包 {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
