--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -189,14 +189,14 @@ merchants.successfulMoneyInput=Спасибо. Средства перечисл
 merchants.sum=Сумма
 merchants.sumToPay=Итого сумма к оплате
 merchants.withdraw=Вывести
-merchants.pendingEnrollment=Зачисление средств приозойдет в течении 48 часов
+merchants.pendingEnrollment=Зачисление средств приозойдет в течение 48 часов
 #not translated
-merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1}
+merchants.depositNotification.body = Пожалуйста, оплатите {0} на кошелек {1} в течение 96 часов
 #not translated
 merchants.depositNotificationWithCurrencyCNY.body = Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body = Заявка на ввод средств создана. Пожалуйста, оплатите {0} на расчетный счет {1} и подтвердите заявку 
+merchants.depositNotificationWithCurrencyIDR.body = Заявка на ввод средств создана. Пожалуйста, оплатите {0} на расчетный счет {1} и подтвердите заявку в течение 72 часов
 merchants.depositNotificationWithCurrencyTHB.body = Пожалуйста, оплатите {0} на расчетный счет {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
