--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -198,11 +198,11 @@ merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=You have successfully deposited {0}. Commission {1}%, funds transferred to your wallet: {2}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
-merchants.depositNotification.body=Please pay {0} on the checking account {1}
+merchants.depositNotification.body=Please pay {0} on the checking account {1} within next 96 hours
 merchants.depositNotificationWithCurrencyCNY.body=Please pay {0} on the wallet {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body=Refill request created. Please pay {0} on the wallet {1} and confirm the request
+merchants.depositNotificationWithCurrencyIDR.body=Refill request created. Please pay {0} on the wallet {1} and confirm the request within next 72 hours
 merchants.depositNotificationWithCurrencyTHB.body=Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
