--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -192,12 +192,12 @@ merchants.sumToPay=Jumlah total yang harus dibayarkan
 merchants.withdraw=Penarikan
 merchants.pendingEnrollment=Jangka waktu penerimaan dana 48 jam
 #not translated
-merchants.depositNotification.body =Silahkan membayar {0} ke dompet {1}
+merchants.depositNotification.body =Silahkan membayar {0} ke dompet {1} dalam waktu 96 jam.
 #not translated
 merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke akun {1} <br> \
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
-merchants.depositNotificationWithCurrencyIDR.body = Refill permintaan dibuat. Silahkan membayar {0} di dompet {1} dan mengkonfirmasi permintaan
+merchants.depositNotificationWithCurrencyIDR.body = Refill permintaan dibuat. Silahkan membayar {0} di dompet {1} dan mengkonfirmasi permintaan dalam waktu 72 jam.
 merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
