add withdraw info modal

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -863,3 +863,4 @@ merchants.withdrawDetails.outputFinalSum=Amount to be enrolled
 merchants.withdrawDetails.recipientBank=Recipient's bank
 merchants.withdrawDetails.recipientAccount=Recipient's account number
 merchants.withdrawDetails.recipientFullName=Recipient's full name
+withdraw.infoModal.title=Withdraw request summary
