--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -891,3 +891,4 @@ merchants.withdrawDetails.outputFinalSum=Jumlah total yang akan ditarik
 merchants.withdrawDetails.recipientBank=Bank penerima
 merchants.withdrawDetails.recipientAccount=Nomor rekening penerima
 merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
+withdraw.infoModal.title=Menarik ringkasan permintaan
