--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -874,3 +874,4 @@ merchants.withdrawDetails.outputFinalSum=Сумма к выводу
 merchants.withdrawDetails.recipientBank=Банк получателя
 merchants.withdrawDetails.recipientAccount=Номер счета получателя
 merchants.withdrawDetails.recipientFullName=ФИО получателя
+withdraw.infoModal.title=Информация о заявке на вывод
