--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -786,3 +786,4 @@ merchants.withdrawDetails.recipientBank=Recipient's bank
 merchants.withdrawDetails.recipientAccount=Recipient's account number
 merchants.withdrawDetails.recipientFullName=Recipient's full name
 withdraw.infoModal.title=Withdraw request summary
+transactionsourcetype.INVOICE=INVOICE
