--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -875,3 +875,4 @@ merchants.withdrawDetails.recipientBank=Банк получателя
 merchants.withdrawDetails.recipientAccount=Номер счета получателя
 merchants.withdrawDetails.recipientFullName=ФИО получателя
 withdraw.infoModal.title=Информация о заявке на вывод
+transactionsourcetype.INVOICE=ИНВОЙС
