--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -892,3 +892,4 @@ merchants.withdrawDetails.recipientBank=Bank penerima
 merchants.withdrawDetails.recipientAccount=Nomor rekening penerima
 merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
 withdraw.infoModal.title=Menarik ringkasan permintaan
+transactionsourcetype.INVOICE=INVOICE
