--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -853,3 +853,4 @@ merchants.depositNotificationWithCurrencyCNY.old = Please pay {0} on the wallet 
 merchants.depositNotificationWithCurrencyTHB.old = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
+news.clearform.prompt=Clear content?
