--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -894,3 +894,4 @@ merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
 withdraw.infoModal.title=Menarik ringkasan permintaan
 transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
+merchants.invoice.error.fieldsNotField=Bidang wajib tidak diisi!
