PROGRAM-253_BTC (adminka)

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -890,3 +890,5 @@ merchants.withdrawDetails.outputFinalSum=Jumlah total yang akan ditarik
 merchants.withdrawDetails.recipientBank=Bank penerima
 merchants.withdrawDetails.recipientAccount=Nomor rekening penerima
 merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
+merchants.invoice.ACCEPTED_AUTO=Accepted
+merchants.invoice.ON_BCH_EXAM=
