--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -635,3 +635,5 @@ merchants.invoice.REVOKED_USER=Revoked
 merchants.invoice.ACCEPTED_ADMIN=Accepted
 merchants.invoice.DECLINED_ADMIN=Declined
 merchants.invoice.EXPIRED=Expired
+merchants.invoice.ACCEPTED_AUTO=Accepted
+merchants.invoice.ON_BCH_EXAM=
