--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1070,3 +1070,5 @@ merchants.withdrawDetails.outputFinalSum=Amount to be enrolled
 merchants.withdrawDetails.recipientBank=Recipient's bank
 merchants.withdrawDetails.recipientAccount=Recipient's account number
 merchants.withdrawDetails.recipientFullName=Recipient's full name
+merchants.invoice.ACCEPTED_AUTO=Accepted
+merchants.invoice.ON_BCH_EXAM=
