--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -873,3 +873,5 @@ merchants.withdrawDetails.outputFinalSum=Сумма к выводу
 merchants.withdrawDetails.recipientBank=Банк получателя
 merchants.withdrawDetails.recipientAccount=Номер счета получателя
 merchants.withdrawDetails.recipientFullName=ФИО получателя
+merchants.invoice.ACCEPTED_AUTO=Утвержден
+merchants.invoice.ON_BCH_EXAM=
