PROGRAM-253_BTC (expire)

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1072,3 +1072,4 @@ merchants.withdrawDetails.recipientAccount=Recipient's account number
 merchants.withdrawDetails.recipientFullName=Recipient's full name
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
+merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
