--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -892,3 +892,4 @@ merchants.withdrawDetails.recipientAccount=Nomor rekening penerima
 merchants.withdrawDetails.recipientFullName=Nama lengkap penerima
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
+merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
