edit withdrawal table

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -869,6 +869,9 @@ withdraw.infoModal.title=Withdraw request summary
 transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Mandatory fields not filled!
+admin.withdraw.new=New
+admin.withdraw.accepted=Accepted
+admin.withdraw.declined=Declined
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
