--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -792,3 +792,8 @@ merchants.invoice.error.fieldsNotField=Mandatory fields not filled!
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
+merchants.invoice.templatePhrases = Typical reasons
+merchants.invoice.phrases.decline.cause = The reason for decline in acceptance of the invoice
+merchants.invoice.phrases.decline.1 = Payment is not found, attach a scan of the receipt
+merchants.invoice.phrases.decline.2 = Bad scan receipts, attach better quality
+merchants.invoice.phrases.decline.3 = Incorrect data on the payer
