add method for invoice amount update

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -791,6 +791,7 @@ withdraw.infoModal.title=Withdraw request summary
 transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Mandatory fields not filled!
+admin.invoice.updateAmount=Update amount
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
