--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -897,6 +897,7 @@ withdraw.infoModal.title=Menarik ringkasan permintaan
 transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Bidang wajib tidak diisi!
+admin.invoice.updateAmount=Jumlah perubahan
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
