--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -880,6 +880,7 @@ withdraw.infoModal.title=Информация о заявке на вывод
 transactionsourcetype.INVOICE=ИНВОЙС
 news.clearform.prompt=Очистить содержимое?
 merchants.invoice.error.fieldsNotField=Обязательные поля не заполнены!
+admin.invoice.updateAmount=Изменить сумму
 merchants.invoice.ACCEPTED_AUTO=Утвержден
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Ваша заявка (инвойс) на ввод BTC id {0} просрочена!
