PROGRAM-257 refactoring + PROGRAM-25_BTC: refactoring and add view and revoke modal without reloading page

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -883,3 +883,10 @@ merchants.invoice.error.fieldsNotField=Обязательные поля не з
 merchants.invoice.ACCEPTED_AUTO=Утвержден
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Ваша заявка (инвойс) на ввод BTC id {0} просрочена!
+merchants.btc_invoice.addressToPay=Адрес для платежа
+merchants.btc_invoice.transactionHash=Хеш транзакции
+merchants.invoice.templatePhrases = Типовые причины
+merchants.invoice.phrases.decline.cause = Причина отказа в акцепте заявки
+merchants.invoice.phrases.decline.1 = оплата не найдена, прикрепите скан квитанции
+merchants.invoice.phrases.decline.2 = плохой скан квитанции, прикрепите лучшего качества
+merchants.invoice.phrases.decline.3 = некорректные данные о плательщике
