fix actual sum change, css refactoring

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -900,7 +900,7 @@ merchants.invoice.error.fieldsNotField=Bidang wajib tidak diisi!
 admin.withdraw.new=Baru
 admin.withdraw.accepted=Diterima
 admin.withdraw.declined=Ditolak
-admin.invoice.updateAmount=Jumlah perubahan
+admin.invoice.updateAmount=Memperbarui jumlah aktual pembayaran
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
@@ -912,3 +912,4 @@ merchants.invoice.phrases.decline.1 = Payment is not found, attach a scan of the
 merchants.invoice.phrases.decline.2 = Bad scan receipts, attach better quality
 merchants.invoice.phrases.decline.3 = Incorrect data on the payer
 admin.userLanguage = The user's preferred language
+merchants.invoice.accept.modalTitle=Accept invoice
