fix actual sum change - continue

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -885,3 +885,6 @@ merchants.invoice.phrases.decline.3 = Incorrect data on the payer
 admin.invoice.updateAmount=Update actual sum of payment
 admin.userLanguage = The user's preferred language
 merchants.invoice.accept.modalTitle=Accept invoice
+merchants.withdraw.new=New
+merchants.withdraw.accepted=Accepted
+merchants.withdraw.declined=Declined
