--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -896,3 +896,6 @@ merchants.invoice.phrases.decline.2 = плохой скан квитанции, 
 merchants.invoice.phrases.decline.3 = некорректные данные о плательщике
 admin.userLanguage = Язык пользователя
 merchants.invoice.accept.modalTitle=Accept invoice
+merchants.withdraw.new=Создан
+merchants.withdraw.accepted=Принят
+merchants.withdraw.declined=Отклонён
