--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -807,3 +807,6 @@ merchants.invoice.phrases.decline.2 = Bad scan receipts, attach better quality
 merchants.invoice.phrases.decline.3 = Incorrect data on the payer
 admin.userLanguage = The user's preferred language
 merchants.invoice.accept.modalTitle=Accept invoice
+merchants.withdraw.new=New
+merchants.withdraw.accepted=Accepted
+merchants.withdraw.declined=Declined
