--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -913,3 +913,6 @@ merchants.invoice.phrases.decline.2 = Bad scan receipts, attach better quality
 merchants.invoice.phrases.decline.3 = Incorrect data on the payer
 admin.userLanguage = The user's preferred language
 merchants.invoice.accept.modalTitle=Accept invoice
+merchants.withdraw.new=Baru
+merchants.withdraw.accepted=Diterima
+merchants.withdraw.declined=Ditolak
