PROGRAM-261 (without check right to set permissions)

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -916,3 +916,6 @@ merchants.invoice.accept.modalTitle=Accept invoice
 merchants.withdraw.new=Baru
 merchants.withdraw.accepted=Diterima
 merchants.withdraw.declined=Ditolak
+admin.userCurrencyPermissions=Operation permissions
+admin.userCurrencyPermissionsRefill=For refill operations
+admin.userCurrencyPermissionsWithdraw=For withdraw operations
