--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -899,3 +899,6 @@ merchants.invoice.accept.modalTitle=Accept invoice
 merchants.withdraw.new=Создан
 merchants.withdraw.accepted=Принят
 merchants.withdraw.declined=Отклонён
+admin.userCurrencyPermissions=Права на операции
+admin.userCurrencyPermissionsRefill=Для операций пополнения
+admin.userCurrencyPermissionsWithdraw=Для операций вывода средств
