--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -647,3 +647,6 @@ merchants.invoice.phrases.decline.1 = Payment is not found, attach a scan of the
 merchants.invoice.phrases.decline.2 = Bad scan receipts, attach better quality
 merchants.invoice.phrases.decline.3 = Incorrect data on the payer
 admin.userLanguage = The user's preferred language
+admin.userCurrencyPermissions=Operation permissions
+admin.userCurrencyPermissionsRefill=For refill operations
+admin.userCurrencyPermissionsWithdraw=For withdraw operations
