add buttons for invoices

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -891,3 +891,5 @@ merchants.withdraw.declined=Declined
 admin.userCurrencyPermissions=Operation permissions
 admin.userCurrencyPermissionsRefill=For refill operations
 admin.userCurrencyPermissionsWithdraw=For withdraw operations
+admin.invoice.new=On review
+admin.invoice.accepted=Accepted
