--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -902,3 +902,5 @@ merchants.withdraw.declined=Отклонён
 admin.userCurrencyPermissions=Права на операции
 admin.userCurrencyPermissionsRefill=Для операций пополнения
 admin.userCurrencyPermissionsWithdraw=Для операций вывода средств
+admin.invoice.new=На рассмотрении
+admin.invoice.accepted=Принятые
