--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -919,3 +919,5 @@ merchants.withdraw.declined=Ditolak
 admin.userCurrencyPermissions=Operation permissions
 admin.userCurrencyPermissionsRefill=For refill operations
 admin.userCurrencyPermissionsWithdraw=For withdraw operations
+admin.invoice.new=On review
+admin.invoice.accepted=Accepted
